--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ readme = "README.md"
 python = "^3.10"
 pyqt6 = "6.4.2"
 pyqt6-tools = "^6.4.2.3.3"
+windows-toasts = "^1.3.1"
+pyqt-toast-notification = "^1.3.3"
+pywin32 = "^310"
+usb = "^0.0.83.dev0"
+pyusb = "^1.3.1"
 
 
 [[tool.poetry.source]]
