--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "ultra-ssdbox-manager"
+name = "Ultra-ssd-enclosure-manager"
 version = "0.1.0"
-description = "GUI Manager for R-SODIUM Ultra SSDBox"
+description = "GUI Manager for R-SODIUM Ultra SSD Enclosure"
 authors = ["Barryblueice <barryblueice@outlook.com>"]
 license = "MPL-2.0"
 package-mode = false
