--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyqt-toast-notification = "^1.3.3"
 pywin32 = "^310"
 usb = "^0.0.83.dev0"
 pyusb = "^1.3.1"
+hidapi = "^0.14.0.post4"
 
 
 [[tool.poetry.source]]
