--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pywin32 = "^310"
 usb = "^0.0.83.dev0"
 pyusb = "^1.3.1"
 hidapi = "^0.14.0.post4"
+qt-material = "^2.17"
 
 
 [[tool.poetry.source]]
