--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ usb = "^0.0.83.dev0"
 pyusb = "^1.3.1"
 hidapi = "^0.14.0.post4"
 qt-material = "^2.17"
+nuitka = "^2.7.12"
 
 
 [[tool.poetry.source]]
