--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,7 @@ package-mode = false
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pyqt6 = "6.4.2"
-pyqt6-tools = "^6.4.2.3.3"
-windows-toasts = "^1.3.1"
+python = ">=3.10,<3.14"
 pyqt-toast-notification = "^1.3.3"
 pywin32 = "^310"
 usb = "^0.0.83.dev0"
@@ -19,6 +16,8 @@ pyusb = "^1.3.1"
 hidapi = "^0.14.0.post4"
 qt-material = "^2.17"
 nuitka = "^2.7.12"
+cython = "^3.1.2"
+pyside6 = "^6.9.1"
 
 
 [[tool.poetry.source]]
